--- a/src/__components__/Hero/index.module.scss
+++ b/src/__components__/Hero/index.module.scss
@@ -19,9 +19,13 @@
       width: 100%;
       margin-bottom: -1.75%;
     }
+
+    @media(max-width: 600px) {
+      margin-bottom: -2%;
+    }
   }
 
-  @media(max-width: 600px) {
+  @media(max-width: 650px) {
    height: 445px;
   }
 }
